...
        app:layout_constraintBottom_toBottomOf="@+id/ubi4GesturesSelectorV"
        app:layout_constraintEnd_toEndOf="@+id/guidline_60"
        app:layout_constraintStart_toStartOf="@+id/guidline_30"
        app:layout_constraintTop_toTopOf="@+id/ubi4GesturesSelectorV" />

    <TextView
        android:id="@+id/bindingGroupTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:fontFamily="@font/sf_pro_display_light"
        android:text="@string/spr_gestures"
        android:textColor="@color/ubi4_deactivate_text"
...
        app:layout_constraintBottom_toBottomOf="@+id/ubi4GesturesSelectorV"
        app:layout_constraintEnd_toEndOf="@+id/ubi4GesturesSelectorV"
        app:layout_constraintStart_toStartOf="@+id/guidline_60"
        app:layout_constraintTop_toTopOf="@+id/ubi4GesturesSelectorV" />

    <View
        android:id="@+id/collectionOfGesturesSelectBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:elevation="5dp"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/ubi4GesturesSelectorV"
...
        app:layout_constraintStart_toStartOf="@+id/ubi4GesturesSelectorV"
        app:layout_constraintTop_toTopOf="@+id/ubi4GesturesSelectorV"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <View
        android:id="@+id/rotationGroupSelectBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:elevation="5dp"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/ubi4GesturesSelectorV"
...
        app:layout_constraintStart_toStartOf="@+id/guidline_30"
        app:layout_constraintTop_toTopOf="@+id/ubi4GesturesSelectorV"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <View
        android:id="@+id/sprGesturesSelectBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:elevation="5dp"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/ubi4GesturesSelectorV"
...
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/collectionGesturesCl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ubi4_back"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <View
                android:id="@+id/gestureCollection0Btn"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/ubi4_view_with_corners_gray_outside"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activeGestureNameCl"
        app:layout_constraintVertical_bias="1.0">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/selectedSprGesturesRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="10dp"
            android:visibility="visible"
...
