...
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dialogAddGesturesRv"
                android:layout_width="match_parent"
                android:layout_height="352dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ubi4_view_with_corners_back_outside"
...
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_text_bold"
                android:text="@string/save_gripper_settings"
                android:textColor="@color/ubi4_yes_system_blue"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/dialogAddGesturesToSaveBtn"
                app:layout_constraintEnd_toEndOf="@+id/dialogAddGesturesToSaveBtn"
                app:layout_constraintStart_toStartOf="@+id/dialogAddGesturesToSaveBtn"
                app:layout_constraintTop_toTopOf="@+id/dialogAddGesturesToSaveBtn" />

            <View
                android:id="@+id/view3"
...
