...
        android:background="@drawable/ubi4_view_with_corners_gray"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/dotsThreeBtnSpr"
            android:layout_width="33dp"
            android:layout_height="11dp"
            android:src="@drawable/dots_three"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

...
