...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/gestureUsedCL"
    android:layout_width="match_parent"
    android:layout_height="44dp">

    <View
        android:id="@+id/ubi4DialogCollectionGestureItemBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="parent"
...
